--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -42,7 +42,7 @@ img {
 .main-contain {
   padding-top: 20px;
   background-color: #DFE0E1;
-  position: relative;
+  //position: relative;
   z-index: -1;
 }
 
@@ -56,5 +56,26 @@ img {
   padding: 15px;
   box-shadow: 1px 1px 8px grey;
   position: static;
-  z-index: 2000;
+  //z-index: 2000;
+}
+.head-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-bar {
+  font-family: 'Arizonia', cursive;
+  font-size: 50px;
+}
+
+.create {
+  background-color: white;
+  border-radius: 5px;
+  display: flex;
+  align-content: center;
+  align-self: center;
+  a:hover {
+    text-decoration: none;
+  }
+
 }
